2014-08-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/i386/pc/biosdisk.c (grub_biosdisk_rw): Add
	safety to avoid triggerring VirtualBox bug.

2014-08-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cbfs.c: Don't probe disks of unknow size.

	Fixes hang on virtualbox.

2014-07-08  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/10_hurd.in: Make kernel list progression not fail on
	kernels whose paths contain regex metacharacters.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/20_linux_xen.in: Likewise.

	Reported by: Heimo Stranner.

2014-06-26  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub-dev.texi (Finding your way around): The build system no
	longer uses AutoGen directly.

2014-06-21  Роман Пехов <roman_pekhov>

	* grub-core/commands/loadenv.c (check_blocklists): Fix overlap check.

2014-06-21  Glenn Washburn <development@efficientek.com>

	* util/grub-install.c: Fix handling of --disk-module.

2014-06-21  Stephane Rochoy <sheda>

	* grub-core/loader/i386/bsd.c (grub_netbsd_boot): Pass pointer to
	EFI system table.

2014-06-21  Stephane Rochoy <sheda>

	* grub-core/commands/efi/lsefisystab.c (grub_cmd_lsefisystab): Show
	EFI system table physical address.

2014-06-21  Trevor Woerner <trevor.woerner@linaro.org>

	* util/grub-gen-asciih.c (add_glyph): Fix uninitialised variable.

2014-06-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (grub_pubkey_open): Trust procfs.

2014-06-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (grub_pubkey_open): Fix memdisk
	check.

2014-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (__bzero): Don't compile in GRUB_UTIL.

	Reported by: Yves Blusseau <blusseau@zetam.org>.

2014-04-20  Piotr Krysiuk  <piotras@gmail.com>

	* grub-core/lib/i386/relocator.c: Allow loading old kernels by placing
	GDT in conventional memory.
